--- a/package.json
+++ b/package.json
@@ -4,6 +4,14 @@
   "license": "MIT",
   "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "ghp": "react-scripts build && gh-pages -d build",
+    "prettify": "prettier --ignore-path \"./.prettierignore\" --write \"./**/*.{js,jsx,json,ts,tsx}\""
+  },
   "dependencies": {
     "@date-io/date-fns": "^1.3.6",
     "@material-ui/core": "^4.11.4",
@@ -29,7 +37,7 @@
     "lodash": "^4.17.15",
     "material-ui": "^1.0.0-beta.47",
     "moment": "^2.24.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^7.0.0",
     "notistack": "^0.8.8",
     "qwest": "^4.5.0",
     "react": "^16.8.6",
@@ -73,13 +81,13 @@
     "swiper": "^4.5.0",
     "victory": "^32.3.3"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "ghp": "react-scripts build && gh-pages -d build",
-    "prettify": "prettier --ignore-path \"./.prettierignore\" --write \"./**/*.{js,jsx,json}\""
+  "devDependencies": {
+    "@babel/runtime": "^7.5.5",
+    "axios-mock-adapter": "^1.17.0",
+    "cross-env": "^5.2.0",
+    "gh-pages": "^2.1.1",
+    "husky": "^5.1.3",
+    "prettier": "^2.2.1"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -90,14 +98,6 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {
-    "@babel/runtime": "^7.5.5",
-    "axios-mock-adapter": "^1.17.0",
-    "cross-env": "^5.2.0",
-    "gh-pages": "^2.1.1",
-    "husky": "^5.1.3",
-    "prettier": "^2.2.1"
-  },
   "husky": {
     "hooks": {
       "pre-commit": "npm run prettify"
