--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "ghp": "react-scripts build && gh-pages -d build",
+    "dev:upgrade": "ncu -u --packageFile package.json && npm i",
     "prettify": "prettier --ignore-path \"./.prettierignore\" --write \"./**/*.{js,jsx,json,ts,tsx}\""
   },
   "dependencies": {
@@ -18,6 +19,7 @@
     "@material-ui/icons": "^4.2.1",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@material-ui/pickers": "^3.3.10",
+    "@material-ui/styles": "^4.11.4",
     "antd": "^4.15.4",
     "apexcharts": "^3.26.2",
     "autosuggest-highlight": "^3.1.1",
@@ -66,8 +68,8 @@
     "react-qr-code": "^1.1.1",
     "react-quill": "^1.3.3",
     "react-redux": "^7.0.3",
-    "react-router-config": "^5.0.1",
-    "react-router-dom": "^5.0.0",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "^6.1.1",
     "react-scripts": "^3.4.4",
     "react-search-field": "^1.2.1",
     "react-select": "^3.0.4",
